# utm-ipd

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CITATION.cff  Dockerfile  LICENSE  NOTICE  README.md  docker-compose.yaml  docker_entrypoint.sh  main.py  pyproject.toml  run_local.sh  s3-access.example.json  s3-access.json
.github/workflows/: deploy.yml
config/: presets.yaml
dash/: 00_IPD_Tournament.py  background.py  opponents.py  plots.py  shared.py  state.py  sweep_guard.py  utils.py
dash/.streamlit/: config.toml  pages.yaml
dash/pages/: 01_IPD_Mini_Sweep.py  02_Moran_Process.py  03_Trust_Game.py  04_UTM_Explained.md  04_UTM_Explained.py
infra/: task-def.json
strategies/: utm_pure.py  utm_tft.py  utm_tft_wsls.py  utm_wsls.py
tests/: test_public_safety.py  test_trust_meter.py  test_utm_tft.py
tournaments/: run_round_robin.py
utm/: __init__.py  log_config.py  trust_meter.py
